--- a/web/modules/custom/registration/templates/registration.html.twig
+++ b/web/modules/custom/registration/templates/registration.html.twig
@@ -20,7 +20,6 @@
   {% endif %}
   {% if content %}
     {{- content.uid -}}
-    FOOO{{- content.field_event -}}BAR
-    <h1>Hello World</h1>
+    {{- content.field_event -}}
   {% endif %}
 </article>
