Unified 403 page Fixes #33

--- a/web/modules/custom/registration/templates/register-add-access-denied-hook.html.twig
+++ b/web/modules/custom/registration/templates/register-add-access-denied-hook.html.twig
@@ -1,18 +1,17 @@
-<p class="messages">You need to be logged in with a valid account to register for Events.
-<ul class="notification">
-    <li><a href="#create-account">create a new account</a>, or</li>
+<p><strong>You need to be logged in to access that page.</strong></p>
+<p class="">From here, you can:</p>
+<ul class="">
+    <li><a href="#create-account">Create a new account</a>, or</li>
     <li><a href="#login">Login to an existing account</a>, or</li>
-    <li>if you're already logged in, <a href="#register-event">register for an event</a> below.</li>
+    <li>Go to the <a href="/">Home page</a>.</li>
 </ul>
-</p>
 
 <h2 id="login">Login:</h2>
+<p><strong>If you already have an account, you can login here.</strong></p>
 <p>{{ login_form }}</p>
 
 <h3>- or -</h3>
 <h2 id="create-account">Create new account:</h2>
+<p><strong>If you don't have an account yet, you can create one here.</strong></p>
+<p>An account allows you to register for Events like Big Day Boston, upload photos, and other things.</p>
 <p>{{ user_register_form }}</p>
-
-<h3>- or -</h3>
-<h2 id="register-event">Register for an Event:</h2>
-<p>{{ event_registration_form }}</p>
